--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     width: 90%;
-    background-color: aliceblue;
+    background-color: #340266;
+    position: relative;
 }
 
 .Navbar {
@@ -13,4 +14,25 @@ body {
     flex-direction: row;
     padding: 10px;
     gap: 50px;
+    color: rgb(255, 255, 255);
+}
+
+.Home {
+    margin-top: 15%;
+    position: absolute;
+    left: 30%;
+}
+
+.name {
+    color: rgb(76, 73, 241);
+}
+
+.fullname {
+    color: rgb(255, 255, 255);
+    font-size: 50px;
+    margin: 0;
+}
+
+.lightblue {
+    color: lightblue;
 }
