--- a/style.css
+++ b/style.css
@@ -47,6 +47,19 @@ body {
 
 .lightcoral {
     color: lightcoral;
+    padding-bottom:2px; /* Creating underline effect */
+    background-image: linear-gradient(#eb6f6f 0 0);
+    background-position: 0 100%;
+    background-size: 0% 2px;
+    background-repeat: no-repeat;
+    transition:
+    background-size 0.3s,
+    background-position 0s 0.3s;
+}
+
+.lightcoral:hover {
+    background-position: 100% 100%;
+    background-size: 100% 2px;
 }
 
 .viewworkcontainer {
@@ -113,3 +126,24 @@ body {
 }
 
 /* Skills Section */
+.Skills {
+    margin-top: 50%;
+    font-size: 30px;
+
+}
+
+.skillsent {
+    font-size: 20px;
+}
+
+.skillset {
+    display: grid;
+}
+
+.row {
+    grid-template: 1fr 1fr / 1fr 1fr 1fr 1fr;
+}
+
+.images {
+    padding: 20px;
+}
