--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
 .Navbar {
     display: flex;
     justify-content: space-between;
-    z-index: 1;
 }
 
 .navtab {
@@ -29,7 +28,6 @@ body {
     margin-top: 15%;
     position: absolute;
     left: 30%;
-    z-index: -1;
 }
 
 .name {
@@ -126,7 +124,6 @@ body {
     max-width: 800px;
     margin-top: 5px;
     color: antiquewhite;
-    z-index: -1;
 }
 
 /* Skills Section */
@@ -215,20 +212,20 @@ body {
 
 /* Footer Section */
 .Contact {
-    max-width: 95px;
-    margin-top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
     font-size: 30px;
-    padding-bottom:2px; /* Creating underline effect */
-    background-image: linear-gradient(#eb6f6f 0 0);
-    background-position: 0 100%;
-    background-size: 0% 2px;
-    background-repeat: no-repeat;
-    transition:
-    background-size 0.3s,
-    background-position 0s 0.3s;
 }
 
-.Contact:hover {
-    background-position: 100% 100%;
-    background-size: 100% 2px;
+.contractphrase {
+    display: flex;
+    justify-content: center;
+}
+
+.footer {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
 }
